# scintigraphy-threshold-area

./: .pre-commit-config.yaml  Dockerfile  app.py  pyproject.toml
.streamlit/: config.toml
scintigraphy_threshold_area/: image.py
tests/: test_scintigraphy_threshold_area.py
